Placed event cards + course cards side-by-side - Edited demo data to remove event description and location descriptions - Added event description and location description to event cards - Changed z-index of FAB buttons for short-term fix to button not being clickable to a lot of content

--- a/frontend/src/app/office-hours/instructor-section-home/instructor-section-home.component.css
+++ b/frontend/src/app/office-hours/instructor-section-home/instructor-section-home.component.css
@@ -6,8 +6,13 @@
     position: fixed;
     bottom: 2rem;
     right: 2rem;
+    z-index: 9999;
 }
 
 .add-button mat-icon {
     color: white;
+}
+
+.inline-block {
+    display: inline-block;
 }
