--- a/frontend/src/app/office-hours/student-section-home/student-section-home.component.css
+++ b/frontend/src/app/office-hours/student-section-home/student-section-home.component.css
@@ -1,3 +1,7 @@
 .page-container {
     padding: 1.5rem;
 }
+
+.inline-block {
+    display: inline-block;
+}
