--- a/frontend/src/app/office-hours/ticket-queue-page/ticket-queue-page.component.css
+++ b/frontend/src/app/office-hours/ticket-queue-page/ticket-queue-page.component.css
@@ -6,6 +6,7 @@
     position: fixed;
     bottom: 2rem;
     right: 2rem;
+    z-index: 9999;
 }
 
 .home-button mat-icon {
